--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -571,6 +571,24 @@
   </div>
 </section>
 
+<!-- Sessions Modal -->
+<div id="sessions-modal" class="modal-overlay" style="display: none;">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 id="modal-title">All Sessions</h2>
+            <button id="modal-close-btn" class="modal-close-btn">
+                <span class="material-icons">close</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p id="modal-subtitle" class="modal-subtitle"></p>
+            <div id="modal-sessions-list" class="modal-sessions-list">
+                <!-- Sessions will be populated here -->
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
 
