fixed bugs with the dashboard portal

--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -692,7 +692,7 @@
                         <span class="material-icons text-purple-500">schedule</span>
                       </div>
                       <p class="text-sm text-gray-600 mb-3">
-                        You have <span id="weekSessionCount">0</span> sessions this week
+                        There are <span id="weekSessionCount">0</span> sessions this week
                       </p>
 
                       <!-- mini week calendar -->
