--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -680,7 +680,7 @@
                         <span class="material-icons text-blue-500">event</span>
                       </div>
                       <p class="text-sm text-gray-600 mb-3">
-                        <span id="todaySessionCount">0</span> sessions today
+                        There are <span id="todaySessionCount">0</span> session today
                       </p>
                       <div id="todaySessionsList" style="position: absolute; top: 100px; left: 20px; right: 20px; bottom: 20px; overflow: hidden;"></div>
                     </section>
