--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -608,7 +608,11 @@
       </div>
       <div class="legend-item">
         <div class="legend-color available"></div>
-        <span>Available</span>
+        <span>Available Days</span>
+      </div>
+      <div class="legend-item">
+        <div class="legend-color unavailable"></div>
+        <span>Unavailable Days</span>
       </div>
     </div>
   </div>
