Fixed legend in 'My Schedule' calendar

--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -607,6 +607,10 @@
         <span>Pending Sessions</span>
       </div>
       <div class="legend-item">
+        <div class="legend-color past"></div>
+        <span>Past Sessions</span>
+      </div>
+      <div class="legend-item">
         <div class="legend-color available"></div>
         <span>Available Days</span>
       </div>
