--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -640,6 +640,24 @@
       </div>
     </div>
 
+<!-- Date Sessions Modal -->
+<div id="date-sessions-modal" class="modal-overlay" style="display: none;">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 id="date-modal-title">Sessions for Date</h2>
+            <button id="date-modal-close-btn" class="modal-close-btn">
+              <span class="material-icons">close</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p id="date-modal-subtitle" class="modal-subtitle"></p>
+            <div id="date-modal-sessions-list" class="modal-sessions-list">
+                <!-- Date sessions will be populated here -->
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
     // Pass units data from backend to JavaScript
     window.unitsData = {{ units_data|tojson }};
